# akso

./: .gitmodules  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.css  App.tsx  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/assets/: shell.json
src-tauri/src/: command.rs  main.rs
src-tauri/src/event/: menu_event.rs  mod.rs
src-tauri/src/jadx/: mod.rs
src-tauri/src/model/: file_info.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  win.rs  windows.rs
src-tauri/src/util/: file.rs
src-tauri/src/window/: setup.rs
src/base/: Ribbon.css  Ribbon.tsx
src/component/: AppInformation.css  AppInformation.tsx  HeaderComponent.tsx  HomeEmptyComponent.tsx  PermissionInformation.css  PermissionInformation.tsx
src/components/: RibbonBar.vue
src/event/: menu_event.ts
src/model/: file_info.ts  manifest.ts
src/util/: manifest_util.ts
