[package]
name = "akso"
version = "0.0.0"
description = "akso"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "unstable"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta"
md5 = "0.7"
sha = "1.0.3"
walkdir = "2.5.0"
zip = "2.1.5"

aapt2 = { path = "../aapt2" }
tauri-plugin-fs = "2.0.0-beta.11"

